2005-10-29 Pawel Salek

	* libbalsa/mailbox_imap.c: last commit could trigger recursive
	searches under certain circumstances. Do it differently.
	* libbalsa/mailbox.c: more information about move errors.
	* libbalsa/imap/imap-auth.c: AUTH={PLAIN,ANONYMOUS} implemented.
	* libbalsa/imap/imap-handle.[hc]: anon support.
	* libbalsa/imap/imap-search.c: fix a bug in searching.
	* libbalsa/imap/imap_private.h: add enable_anonymous and
	enable_binary fields.
	* libbalsa/imap/pop3.c: minor cleanup.
	* src/balsa-index.[hc]: extend SoS filter.
	* src/main-window.[hc]: related changes.

2005-10-28 Pawel Salek

	* libbalsa/mailbox_imap.c: fix unread msg counts on concurrent mbox
	access.

2005-10-28 06:37  PeterB

	* src/: sendmsg-window.c, sendmsg-window.h: use separate members
	for the message we're replying to, and the draft message we saved.
	* libbalsa/mailbox_local.c: reverse a loop.
	* libbalsa/mailbox_mbox.c: look for appended messages in the
	correct place; always save the from-offset as the start of the
	message.

2005-10-27 17:56  PeterB

	* src/save-restore.c: set filters-trash-mbox.

2005-10-23 Pawel Salek

	* NEWS, configure.in: release 2.3.6

2005-10-19 Pawel Salek

	* libbalsa/imap/imap-tls.c: be compatible with openssl-0.9.8.
	* libbalsa/libbalsa-conf.c: fix memory leaks.

2005-10-14 06:53  PeterB

	* libbalsa/mailbox.c: check for NULL user-data.

2005-10-10 Pawel Salek

	* libbalsa/imap-server.c: distinguish between failed and cancelled
	authentication.
	* libbalsa/libbalsa.h: add cancelled authentication error code.
	* libbalsa/mailbox_imap.c: handle better errors in ::add_message.
	* libbalsa/imap/imap-auth.c, auth-{cram,gssapi}.c: cancelled vs failed.
	* libbalsa/imap/libimap.h: add apriopriate error code.
	* src/balsa-index.c: do not retry if the authentication was cancelled.
	* src/sendmsg-window.c:
	* src/spell-check.c: parent properly spell checking error messages.

2005-10-07 11:25  PeterB

	* libbalsa/libbalsa-conf.c: fix bug 318171.