@@ -78,7 +78,8 @@ GtkWidget *balsa_window_find_current_index(BalsaWindow * window);
 void balsa_window_enable_mailbox_menus(BalsaWindow * window,
 				       BalsaIndex * index);
 void balsa_window_update_book_menus(BalsaWindow *window);
-LibBalsaCondition* balsa_window_get_view_filter(BalsaWindow *window);
+LibBalsaCondition* balsa_window_get_view_filter(BalsaWindow *window,
+                                                gboolean flags_only);
 void balsa_window_refresh(BalsaWindow * window);
 void balsa_window_open_mbnode(BalsaWindow * window, BalsaMailboxNode*mbnode);
 void balsa_window_close_mbnode(BalsaWindow * window, BalsaMailboxNode*mbnode);
